optimizacion de mdt productora

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
    <div class="card w-75 mt-5">
      <div class="card-img-noticias">
        
-       <a href="mdtnoticias.html">
-         <img src="img/banner-franco.jpg" alt="" class="w-100">
+       <a href="#">
+         <img src="img/banner-franco.jpg" alt="img-mdt-noticias" class="w-100">
         </a>
       </div>
     </div>
@@ -116,7 +116,7 @@
     <div class="col-lg-4 col-md-6 mb-4 ">
       <div class="card">
         <div class="card-mdt-img-container">
-          <img src="img/contacto-2.png" class="card-img-top" alt="...">
+          <img src="img/contacto-2.png" class="card-img-top" alt="img-streming">
           <div class="card-mdt text-center">
             <h1>STREAMING</h1>
           </div>
@@ -128,7 +128,7 @@
     <div class="col-lg-4 col-md-6 mb-4 ">
       <div class="card">
         <div class="card-mdt-img-container">
-          <img src="img/CARD-TV.png" class="card-img-top" alt="...">
+          <img src="img/CARD-TV.png" class="card-img-top" alt="img-tv">
           <div class="card-mdt text-center">
             <h1>TV</h1>
           </div>
@@ -140,7 +140,7 @@
     <div class="col-lg-4 col-md-6 mb-4 ">
       <div class="card">
         <div class="card-mdt-img-container">
-          <img src="img/img-para-radio.jpg" class="card-img-top" alt="...">
+          <img src="img/img-para-radio.jpg" class="card-img-top" alt="img-radio">
           <div class="card-mdt text-center">
            <h1>RADIO</h1>
           </div>
@@ -151,26 +151,33 @@
  </div>
 <h1 class="title-servicios text-center"> SERVICIOS </h1>
 <div class="seccion-servicios">
-<p><img src="img/mano-señalando.png" alt="" class=""></img>Servicios de fotos y videos.</p>
-<p><img src="img/mano-señalando.png" alt="" class=""></img>Servicios de fotografías.</p>
-<p><img src="img/mano-señalando.png" alt="" class=""></img>Servicios de cobertura de eventos, fotos o videos.</p>
-<p><img src="img/mano-señalando.png" alt="" class=""></img>Servicios de realización de spots publicitarios.</p>
-<p><img src="img/mano-señalando.png" alt="" class=""></img>Servicios audiovisuales de videos corporativos.</p>
-<p><img src="img/mano-señalando.png" alt="" class=""></img>Realizacion de videoclips.</p>
-<p><img src="img/mano-señalando.png" alt="" class=""></img>Realizacion de documentales.</p>
-<p><img src="img/mano-señalando.png" alt="" class=""></img>Servicios de cobertura de eventos empresariales y streaming.</p>
-<p><img src="img/mano-señalando.png" alt="" class=""></img>Servicios de contenidos especializado para redes sociales.</p>
-<p><img src="img/mano-señalando.png" alt="" class=""></img>Servicios de edición de videos.</p>
-<p><img src="img/mano-señalando.png" alt="" class=""></img>Servicios de videos institucionales.</p>
-<p><img src="img/mano-señalando.png" alt="" class=""></img>Servicios de streaming.</p>
-<p><img src="img/mano-señalando.png" alt="" class=""></img>Grabación y material en crudo.</p>
-<p><img src="img/mano-señalando.png" alt="" class=""></img>Producción de podcast, cursos y stream.</p>
-<p><img src="img/mano-señalando.png" alt="" class=""></img>Espacios para dos, tres o cuatro personas.</p>
-<p><img src="img/mano-señalando.png" alt="" class=""></img>Jornadas de dos, cuatro u ocho horas.</p>
+<p><img src="img/mano-señalando.png" alt="img-manito-ok" class=""></img>Servicios de fotos y videos.</p>
+<p><img src="img/mano-señalando.png" alt="img-manito-ok" class=""></img>Servicios de fotografías.</p>
+<p><img src="img/mano-señalando.png" alt="img-manito-ok" class=""></img>Servicios de cobertura de eventos, fotos o videos.</p>
+<p><img src="img/mano-señalando.png" alt="img-manito-ok" class=""></img>Servicios de realización de spots publicitarios.</p>
+<p><img src="img/mano-señalando.png" alt="img-manito-ok" class=""></img>Servicios audiovisuales de videos corporativos.</p>
+<p><img src="img/mano-señalando.png" alt="img-manito-ok" class=""></img>Realizacion de videoclips.</p>
+<p><img src="img/mano-señalando.png" alt="img-manito-ok" class=""></img>Realizacion de documentales.</p>
+<p><img src="img/mano-señalando.png" alt="img-manito-ok" class=""></img>Servicios de cobertura de eventos empresariales y streaming.</p>
+<p><img src="img/mano-señalando.png" alt="img-manito-ok" class=""></img>Servicios de contenidos especializado para redes sociales.</p>
+<p><img src="img/mano-señalando.png" alt="img-manito-ok" class=""></img>Servicios de edición de videos.</p>
+<p><img src="img/mano-señalando.png" alt="img-manito-ok" class=""></img>Servicios de videos institucionales.</p>
+<p><img src="img/mano-señalando.png" alt="img-manito-ok" class=""></img>Servicios de streaming.</p>
+<p><img src="img/mano-señalando.png" alt="img-manito-ok" class=""></img>Grabación y material en crudo.</p>
+<p><img src="img/mano-señalando.png" alt="img-manito-ok" class=""></img>Producción de podcast, cursos y stream.</p>
+<p><img src="img/mano-señalando.png" alt="img-manito-ok" class=""></img>Espacios para dos, tres o cuatro personas.</p>
+<p><img src="img/mano-señalando.png" alt="img-manito-ok" class=""></img>Jornadas de dos, cuatro u ocho horas.</p>
 </div>
 
+<div class="container">
 
-
+  <p class="listen-radio fs-4">Escucha esta radio!. Acá podes descargala 
+    <a href="https://play.google.com/store/apps/details?id=com.mdtradio" class=" text-decoration-none"> 
+    <img src="img/playstore-google.png" style="width: 50px;" alt="img-play-store">
+    <img src="img/sale.png" style="width: 100px;" alt="img-radio-mdt">
+  </a>
+  </p> 
+</div>
 
 
 <div class="box mt-5">
@@ -210,37 +217,16 @@
            
           </div>
     </div>
-    <div class="box2 mt-2">
-      <div class="row container-fluid">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1698.6829848568855!2d-60.701057151578844!3d-31.62382871437706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9c2cb6ca1e1%3A0xdee5452eed343c4e!2sJuan%20Mar%C3%ADa%20Guti%C3%A9rrez%202538%2C%20S3002%20Santa%20Fe%20de%20la%20Vera%20Cruz%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1709502898905!5m2!1ses!2sar" 
-        width="400" 
-        height="200" 
-        style="border:0;" 
-        allowfullscreen="" 
-        loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
-    <!-- <iframe 
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d505.0224829755916!2d-60.70023643238288!3d-31.623642621207736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9c2cb6ca1e1%3A0xdee5452eed343c4e!2sJuan%20Mar%C3%ADa%20Guti%C3%A9rrez%202538%2C%20S3002%20Santa%20Fe%20de%20la%20Vera%20Cruz%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1709502525292!5m2!1ses!2sar" 
-    width="300" 
-    height="200" 
-    tyle="border:0;" 
-    allowfullscreen="" 
-    loading="lazy" 
-    referrerpolicy="no-referrer-when-downgrade">
-  </iframe> -->
-   </div>
-   </div>
+   
 
 
 <!-- grupo 3 redes-->
     <div class="box3 col-lg-4">
       <h4 class="siguenos text-center mt-2 fs-1">SIGUENOS</h4>
       <div class="redes d-flex justify-content-center">
-        <a href="http://www.facebook.com" class="fa fa-facebook p-4 fs-5"> </a>
+        <a href="https://www.facebook.com/profile.php?id=100066693948091" class="fa fa-facebook p-4 fs-5"> </a>
         <a href="http://www.twitter.com" class="fa fa-twitter p-4 fs-5"> </a>
-        <a href="http://www.instagram.com" class="fa fa-instagram p-4 fs-5"> </a>
-        <a href="http://www.linkedin.com" class="fa fa-linkedin p-4 fs-5"></a>
+        <a href="https://www.instagram.com/mdtproductora/" class="fa fa-instagram p-4 fs-5"> </a>
       </div>
     </div>
     </div>
