--- a/radio.html
+++ b/radio.html
@@ -27,12 +27,12 @@
 
 <!-- LOGO -->
 
-<div class="logo-container opacity-75">
+<div class="logo-container">
     <img src="./img/LGMdt.png"/>
 </div>
 
 <button
-    class="navbar-toggler"
+    class="navbar-toggler text-bg-light"
     type="button"
     data-bs-toggle="collapse"
     data-bs-target="#navbarNavDropdown"
@@ -82,19 +82,35 @@
     </div>
     <!-- RADIO APP  -->
     <div class="container text-bg-secondary rounded-3 mt-5">
-      <h1 class="title-radio text-center mt-5 p-4">Radio App
-        <span>
-        <img src="img/radio_icon.png" alt="" class="logo-radio">
-      </span>
-      <span id="radioStatus">
-        Fuera de servicio
-      </span> 
-    </h1>
-      <div class="radio-controls text-center rounded-3">
-          <button id="playBtn" class="btn btn fs-5 p-3 m-3"><i class="fa fa-play"></i> Play</button>
-          <button id="pauseBtn" class="btn btn fs-5 p-3 m-3"><i class="fa fa-pause"></i> Pausa</button>
-          <button id="stopBtn" class="btn btn fs-5 p-3 m-3"><i class="fa fa-stop"></i> Parar</button>
-      </div>
+      <h1 class="title-radio text-center mt-5 p-4">RADIO
+          <span>
+              <img src="img/radio_icon.png" alt="" class="logo-radio">
+          </span>
+          <p id="radioStatus">Fuera de línea</p>
+      </h1>
+      <audio id="stream" controls preload="none" autoplay style="width: 100%">
+          <source src="https://streaming01.shockmedia.com.ar:10695/stream" type="audio/mpeg">
+      </audio>
+      <script>
+          var audio = document.getElementById('stream');
+          audio.volume = 0.5;
+  
+          const radioStatus = document.getElementById('radioStatus');
+  
+          // Verifica si la radio está fuera de línea cuando no se puede cargar el audio
+          audio.onerror = function() {
+              radioStatus.textContent = 'Fuera de línea';
+          };
+  
+          // Verifica si la radio está fuera de línea cuando no se puede reproducir el audio
+          audio.onplay = function() {
+              if (audio.paused) {
+                  radioStatus.textContent = 'Fuera de línea';
+              } else {
+                  radioStatus.textContent = 'En línea';
+              }
+          };
+      </script>
   </div>
 
   <!-- FOOTER  -->
@@ -124,37 +140,15 @@
            
           </div>
     </div>
-    <div class="box2 mt-2">
-      <div class="row container-fluid">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1698.6829848568855!2d-60.701057151578844!3d-31.62382871437706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9c2cb6ca1e1%3A0xdee5452eed343c4e!2sJuan%20Mar%C3%ADa%20Guti%C3%A9rrez%202538%2C%20S3002%20Santa%20Fe%20de%20la%20Vera%20Cruz%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1709502898905!5m2!1ses!2sar" 
-        width="400" 
-        height="200" 
-        style="border:0;" 
-        allowfullscreen="" 
-        loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
-    <!-- <iframe 
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d505.0224829755916!2d-60.70023643238288!3d-31.623642621207736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9c2cb6ca1e1%3A0xdee5452eed343c4e!2sJuan%20Mar%C3%ADa%20Guti%C3%A9rrez%202538%2C%20S3002%20Santa%20Fe%20de%20la%20Vera%20Cruz%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1709502525292!5m2!1ses!2sar" 
-    width="300" 
-    height="200" 
-    tyle="border:0;" 
-    allowfullscreen="" 
-    loading="lazy" 
-    referrerpolicy="no-referrer-when-downgrade">
-  </iframe> -->
-   </div>
-   </div>
-
+    
 
 <!-- grupo 3 redes-->
     <div class="box3 col-lg-4">
       <h4 class="siguenos text-center mt-2 fs-1">SIGUENOS</h4>
       <div class="redes d-flex justify-content-center">
-        <a href="http://www.facebook.com" class="fa fa-facebook p-4 fs-5"> </a>
+        <a href="https://www.facebook.com/profile.php?id=100066693948091" class="fa fa-facebook p-4 fs-5"> </a>
         <a href="http://www.twitter.com" class="fa fa-twitter p-4 fs-5"> </a>
-        <a href="http://www.instagram.com" class="fa fa-instagram p-4 fs-5"> </a>
-        <a href="http://www.linkedin.com" class="fa fa-linkedin p-4 fs-5"></a>
+        <a href="https://www.instagram.com/mdtproductora/" class="fa fa-instagram p-4 fs-5"> </a>
       </div>
     </div>
     </div>
@@ -169,7 +163,8 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
 <!-- Font Awesome -->
-<script type="text/javascript" src="src/radio-app.js"></script>
+
+
 </body>
 </html>
 
