optimizacion de mdt productora

--- a/contacto.html
+++ b/contacto.html
@@ -27,9 +27,9 @@
 </head>
 <body>
 
-    <!-- HEADER -->
+   <!-- HEADER -->
 
-<header class="container-nav container-fluid z-2 position-fixed">
+<header class="container-nav container-fluid position-relative">
   
   <!-- NAV -->
 
@@ -61,7 +61,7 @@
             <a class="nav-link fs-6 p-3" aria-current="page" href="./index.html">MDT</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link fs-6 p-3" href="./eter.html">ETER STREAM</a>
+            <a class="nav-link fs-6 p-3" href="./eter.html">ÉTER STREAM</a>
         </li>
         <li class="nav-item">
             <a class="nav-link fs-6 p-3" href="./tv.html">TV</a>
@@ -154,7 +154,7 @@
   </div>
         
 
-  <div class="box mt-5">
+  <!-- <div class="box mt-5">
     <div class="box-sm red"></div>
     <div class="box-sm orange"></div>
     <div class="box-sm yellow "></div>
@@ -162,7 +162,7 @@
     <div class="box-sm blue "></div>
     <div class="box-sm purple"></div>
   </div>
-  </div>
+  </div> -->
 
 
         <!-- FOOTER  -->
