optimizacion de mdt productora

--- a/contacto.html
+++ b/contacto.html
@@ -154,7 +154,7 @@
   </div>
         
 
-  <!-- <div class="box mt-5">
+  <div class="box mt-5">
     <div class="box-sm red"></div>
     <div class="box-sm orange"></div>
     <div class="box-sm yellow "></div>
@@ -162,7 +162,7 @@
     <div class="box-sm blue "></div>
     <div class="box-sm purple"></div>
   </div>
-  </div> -->
+  </div>
 
 
         <!-- FOOTER  -->
