--- a/radio.html
+++ b/radio.html
@@ -113,6 +113,19 @@
       </script>
   </div>
 
+
+
+  <div class="box mt-5">
+    <div class="box-sm red"></div>
+    <div class="box-sm orange"></div>
+    <div class="box-sm yellow "></div>
+    <div class="box-sm green "></div>
+    <div class="box-sm blue "></div>
+    <div class="box-sm purple"></div>
+  </div>
+  </div>
+
+
   <!-- FOOTER  -->
 
 <!-- grupo 1 logo-->
